[gd_scene load_steps=12 format=3 uid="uid://qucvufihxw0p"]

[ext_resource type="Script" path="res://lvl2/enemy_new_type1.gd" id="1_ryn15"]
[ext_resource type="Texture2D" uid="uid://cqwjhdgmnvsgw" path="res://lvl2/enemy3/IMG_0851-removebg-preview.png" id="2_5glij"]
[ext_resource type="Texture2D" uid="uid://bfk8a4fpcqfku" path="res://lvl2/enemy3/IMG_0852-removebg-preview.png" id="3_43d86"]
[ext_resource type="Texture2D" uid="uid://tf17o5xeccag" path="res://lvl2/enemy3/IMG_0853-removebg-preview.png" id="4_i2vnd"]
[ext_resource type="Texture2D" uid="uid://el5luk6v27j5" path="res://lvl2/enemy3/IMG_0854-removebg-preview.png" id="5_uli22"]
[ext_resource type="Texture2D" uid="uid://75op5wi2tw58" path="res://lvl2/enemy3/IMG_0855-removebg-preview.png" id="6_65lus"]
[ext_resource type="Texture2D" uid="uid://tk1pl7pojd81" path="res://lvl2/enemy3/IMG_0856-removebg-preview.png" id="7_be68g"]

[sub_resource type="SpriteFrames" id="SpriteFrames_h3d0g"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_5glij")
}, {
"duration": 1.0,
"texture": ExtResource("3_43d86")
}, {
"duration": 1.0,
"texture": ExtResource("4_i2vnd")
}, {
"duration": 1.0,
"texture": ExtResource("5_uli22")
}, {
"duration": 1.0,
"texture": ExtResource("6_65lus")
}, {
"duration": 1.0,
"texture": ExtResource("7_be68g")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_08do0"]
radius = 31.0
height = 152.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_03i2k"]
size = Vector2(357.832, 49)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w3xyl"]
size = Vector2(491, 46)

[node name="RigidBody2D" type="RigidBody2D"]
script = ExtResource("1_ryn15")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(106, 0)
scale = Vector2(0.663261, 0.669654)
sprite_frames = SubResource("SpriteFrames_h3d0g")
animation = &"walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(103, 9)
shape = SubResource("CapsuleShape2D_08do0")

[node name="detection_area_left" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area_left"]
position = Vector2(-83.084, 55.5)
shape = SubResource("RectangleShape2D_03i2k")

[node name="take_cooldown_damage" type="Timer" parent="."]

[node name="detection_area_right" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area_right"]
position = Vector2(346.5, 57)
shape = SubResource("RectangleShape2D_w3xyl")

[connection signal="body_entered" from="detection_area_left" to="." method="_on_detection_area_left_body_entered"]
[connection signal="body_exited" from="detection_area_left" to="." method="_on_detection_area_left_body_exited"]
[connection signal="timeout" from="take_cooldown_damage" to="." method="_on_take_cooldown_damage_timeout"]
[connection signal="body_entered" from="detection_area_right" to="." method="_on_detection_area_right_body_entered"]
[connection signal="body_exited" from="detection_area_right" to="." method="_on_detection_area_right_body_exited"]
